--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.0'
     id 'io.spring.dependency-management' version '1.1.0'
+
+    id 'maven-publish'
 }
 
 group 'me.shinsunyoung'
@@ -24,6 +26,7 @@ dependencies {
     implementation 'com.mysql:mysql-connector-j'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.projectlombok:lombok'
@@ -37,4 +40,29 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+//publishing
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            // 이전에 설정된 group, version, artifactId를 사용합니다.
+            from components.java
+            groupId = project.group
+            artifactId = 'TEST' // 프로젝트 이름에 맞게 수정
+            version = project.version
+        }
+    }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            // 저장소 URL을 'social-archive/chapter11'에 맞게 설정합니다.
+            url = uri("https://maven.pkg.github.com/tember8003/TEST")
+            credentials {
+                // GitHub Actions 환경 변수로부터 사용자 이름과 토큰을 가져옵니다.
+                username = System.getenv("USERNAME")
+                password = System.getenv("TOKEN")
+            }
+        }
+    }
 }
