--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ publishing {
         maven {
             name = "GitHubPackages"
             // 저장소 URL을 'social-archive/chapter11'에 맞게 설정합니다.
-            url = uri("https://maven.pkg.github.com/tember8003/TEST")
+            url = uri("https://maven.pkg.github.com/tember8003/untitle")
             credentials {
                 // GitHub Actions 환경 변수로부터 사용자 이름과 토큰을 가져옵니다.
                 username = System.getenv("USERNAME")
